# OpenWebUI-SDK

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  QWEN.md  README.md  agents.md  generate_client.sh  pyproject.toml  run_full_scenario.sh
.agents/: README.md  config.example.yaml  setup.sh  validate.sh
.claude/commands/: ai-agent-blueprint.md  init-ai-env.md
.github/: AGENT_HANDOFF.md  copilot-instructions.md
.github/workflows/: release.yaml  test.yaml
docs/: AI_FIRST_CODING_AGENT_PROMPT.md
openwebui/: __init__.py  client.py  config.py  exceptions.py
openwebui/api/: chats.py  folders.py  knowledge.py
openwebui/cli/: main.py
openwebui/open_web_ui_client/: README.md  pyproject.toml
openwebui/open_web_ui_client/open_web_ui_client/api/auths/: get_session_user_api_v1_auths_get.py
openwebui/open_web_ui_client/open_web_ui_client/api/default/: chat_completion_api_v1_chat_completions_post.py  embeddings_api_v1_embeddings_post.py  get_models_api_v1_models_get.py
openwebui/open_web_ui_client/open_web_ui_client/api/files/: get_file_process_status_api_v1_files_id_process_status_get.py  upload_file_api_v1_files_post.py
openwebui/open_web_ui_client/open_web_ui_client/api/models/: export_models_api_v1_models_export_get.py  sync_models_api_v1_models_sync_post.py
openwebui/open_web_ui_client/open_web_ui_client/api/users/: get_user_groups_by_id_api_v1_users_user_id_groups_get.py  get_user_profile_image_by_id_api_v1_users_user_id_profile_image_get.py
openwebui/open_web_ui_client/open_web_ui_client/models/: __init__.py  chat_completion_api_v1_chat_completions_post_form_data.py  chat_permissions.py  embeddings_api_v1_embeddings_post_form_data.py  session_user_info_response.py  session_user_info_response_permissions_type_0.py  sync_models_form.py  update_profile_form.py  user_model.py  web_config.py
openwebui/utils/: api_utils.py  kbignore_parser.py
tests/: conftest.py
tests/cli/: test_cli_chat.py  test_cli_folder.py  test_cli_knowledge.py
tests/integration/: test_kb_sdk_integration.py  test_sdk_integration.py
tests/sdk/: test_sdk_chats.py  test_sdk_folders.py  test_sdk_knowledge.py
